feat(character): add glossary page structure

--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -20,6 +20,10 @@
         <img class="rpgui-icon skull" src={% static 'images/red-skull.png' %}>
         <p>Role play is an open-source virtual role playing game.</p>
         <p>It is an online version of "paper" role play games.</p>
+        <p>
+            If you want to know more about the role play universe, please have a look at the
+            <a href="{% url 'glossary' %}">glossary</a>.
+        </p>
 
         <hr style="clear:both"/>
 
