feat(game): implement perform_ability_check() task

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -185,7 +185,8 @@
                 eventsSocket.send(JSON.stringify({
                     'type': ABILITY_CHECK,
                     'date': Date.now(),
-                    'player_type': PLAYER
+                    'player_type': PLAYER,
+                    'message': senderStr + ' performed an ability check!',
                 }));
             });
         }
