feat(game): buttons are refreshed dynamically

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -34,11 +34,11 @@
                         <label>Message:</label>
                         <input id="message-input" type="text">
                     </p>
-                    <div class="rpgui-center">
+                    <div id="player-actions" class="rpgui-center">
                         <button id="message-submit" class="rpgui-button" type="submit">
                             <p>Send</p>
                         </button>
-                        {% if player %}
+                        {% if player and ability_check_request %}
                             <button id="ability-check-submit" class="rpgui-button" type="submit">
                                 <p>Perform ability check</p>
                             </button>
@@ -127,7 +127,9 @@
 
         const MESSAGE = "message";
         const QUEST_UPDATE = "quest.update";
+        const ABILITY_CHECK_REQUEST = "ability.check.request";
         const ABILITY_CHECK = "ability.check";
+        const ABILITY_CHECK_RESULT = "ability.check.result";
 
         eventsSocket.onmessage = function(event) {
             message = JSON.parse(event.data)
@@ -139,6 +141,11 @@
             }
             if (message["type"] === QUEST_UPDATE) {
                 $("#quest").load(" #quest > *");
+            }
+            if (message["type"] === ABILITY_CHECK_REQUEST || message["type"] === ABILITY_CHECK_RESULT) {
+                // The full page has to be reloaded, otherwise clicking on the button
+                // triggers no action.
+                location.reload();
             }
         };
 
