--- a/game/templates/game/ability_check_request.html
+++ b/game/templates/game/ability_check_request.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="form rpgui-container framed-golden">
         <h1>{{ game }}</h1>
-        <p>{{ character.name }}'s XP: {{ character.xp }}</p>
+        <p>Prepare your ability check.</p>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
